# eightest

./: .gitignore  CHANGELOG.md  README.md  config.env  process.py  pyproject.toml  requirements.txt  runner.py  search.py  tox.ini
docs/markdown/: features-pl.md  important_links.md  process-pool.md  why_multiprocessing.md
eightest/: __init__.py  database.py  decorators.py  exceptions.py  logger.py  manage.py  process.py  runner.py  searcher.py  testcase.py  utilities.py
eightest/gui/: asgi.py  settings.py  urls.py  wsgi.py
eightest/gui/apps/history/: urls.py  views.py
eightest/gui/apps/home/: apps.py  urls.py  views.py
eightest/gui/apps/navbar/: apps.py  urls.py  views.py
eightest/gui/static/staticfiles/styles/: footer.css  footer.css.map  home.css  home.css.map  navbar.css  navbar.css.map
eightest/gui/static/styles/: footer.css  footer.sass  history.sass  home.css  home.sass  navbar.css  navbar.sass  style.css
eightest/gui/templates/: footer.html  history.html  home.html  main.html  navbar.html
source/: __init__.py  decorators.py  exceptions.py  logger.py  process.py  runner.py  search.py  searcher.py  testcase.py  utils.py
tests/: test_selenium.py  test_strings.py  test_suite.py
