[build-system]
requires = ["hatchling", "dill", "multiprocess", "psutil"]
build-backend = "hatchling.build"

[project]
name = "eightest"
version = "0.4.0"
authors = [
  { name="Alraku (Krzysztof Rakowski)", email="ekoalraku@gmail.com" },
]
description = "GUI equipped Test Framework"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Framework :: Django :: 4.1",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/Alraku/eightest"
"Bug Tracker" = "https://github.com/Alraku/eightest/issues"